--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
 .App {
   text-align: center;
 }
+
+
+.oneCard{
+  border: 1px black solid;
+  border-radius: 10%;
+  height:300px;
+  width: 300px;
+
+}
+.homeCardImage{
+  height:200px;
+  width: 200px;
+}
