--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,9 @@
   text-decoration: none;
   color: rgb(53, 57, 53);
 }
+/* .titlemain{
+
+} */
 .footerLink{
   text-decoration: none;
   color: rgb(192, 204, 192);
